2023-11-03  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.9-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.9-beta01: ';git push
	git tag -a 5.1.9-beta01 -m 'all: flg_ilv fix, WIN32 sls_chr; ncap2 parse NC_MIN_INT64; ncks: chk_xtn; ncremap: trbilin, trintbilin, ncoaave, ...;';git push --tags

	* Update config.guess, config.sub from GNU Savannah

	* Determine sls_chr from _MSC_VER and (new) WINOS token instead of (old) WIN32 token

	* Deprecate WIN32 token, use WINOS instead (in pvmgetarch, Makefile, Makefile.old, configure.ac)

	* Add MinGW to GNU_TRP and PVM_ARCH types that define WINOS token

2023-11-02  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.9-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.9-alpha03: Caring Bridge';git push
	git tag -a 5.1.9-alpha03 -m 'all: fix uninitialized flg_ilv to fix ncra, ncrcat bugs; ncap2: refactor exit(), parse NC_MIN_INT64; ncks: chk_xtn';git push --tags

	* Add --chk_xtn to check DIWG filename extension recommendation in diwg_chk

	* Determine sls_chr from _MSC_VER not WIN32 (archaic)
	Fixes bug where NCO expected Windows filenames like C:/foo.nc instead of C:\foo.nc

2023-11-01  Charlie Zender  <zender@uci.edu>

	* Henry fixes NC_MIN_INT64 parsing so limits.nco completes successfully!

2023-10-31  Charlie Zender  <zender@uci.edu>

	* ncremap/ncclimo: Update Perlmutter modules

	* Add ncremap error messages for for esmfbilin, esmfaave, trbilin, trintbilin

	* Try std::strtoll() and std::strtoull() in ncoGrammar.g to fix	limits.nco behavior (requires ISO C++ 2011)

	* Initialize flg_ilv=False in nco_lmt_evl() to fix ncra bug reported by Chris G. and Jim Benedict
	This eliminates ALL valgrind uninitialized value warnings when SSC specified without ILV

2023-10-24  Charlie Zender  <zender@uci.edu>

	* Cleanup ncap2 limits.nco test, which fails on MacOS and Linux

2023-10-20  Charlie Zender  <zender@uci.edu>
